--- a/zh-CN/700.reference/1200.database-proxy/500.logical-connection/200.displays-the-status-of-a-session.md
+++ b/zh-CN/700.reference/1200.database-proxy/500.logical-connection/200.displays-the-status-of-a-session.md
@@ -1,8 +1,8 @@
 # 展示 Session 详细状态
 
-本文介绍了查看 ODP 指定 Client Session 的详细内部状态的方法。
+本文介绍了如何通过 ODP 查看指定 Client Session 的详细内部状态。
 
-## 查看指定 Client Session 的详细内部状态
+## 操作步骤
 
 通过 `SHOW PROXYSESSION ATTRIBUTE` 语句可以查看指定 Client Session 的详细内部状态，包括该 Client Session 上涉及的相关 Server Session。
 
@@ -243,17 +243,17 @@
     | server_ip              | OBServer 节点的 IP 地址                |
     | server_port            | OBServer 节点的端口号                   |
     | server_sessid          | OBServer 节点的会话 ID 号               |
-    | ss_id                  | ODP 标记 Server Session的 ID 号         |
+    | ss_id                  | ODP 标记 Server Session 的 ID 号         |
     | state                  | 网络连接状态                            |
-    | transact_count                   | ?                   |
-    | server_trans_stat                | ?                    |
-    | hot_sys_var_version              | ?                    |
-    | sys_var_version                  | ?                   |
-    | user_var_version                 | ?                    |
-    | last_insert_id_version           | ?                    |
-    | db_name_version                  | ?                    |
-    | is_checksum_supported            | ?                    |
-    | is_safe_read_weak_supported      | ?                    |
+    | transact_count                   | 当前 Server Session 执行事务的数量                   |
+    | server_trans_stat                | 当前 Server Session 的执行状态，主要用于验证当前 Server Session 的请求执行情况是否准确                    |
+    | hot_sys_var_version              | ODP 保存的常用系统变量的版本                    |
+    | sys_var_version                  | ODP 保存的系统变量的版本                   |
+    | user_var_version                 | ODP 保存的用户系统变量的版本                    |
+    | last_insert_id_version           | ODP 保存的 `last_insert_id` 变量的版本                    |
+    | db_name_version                  | ODP 保存的当前数据库变量的版本                    |
+    | is_checksum_supported            | 当前 Server Sesion 是否开启了校验和                    |
+    | is_safe_read_weak_supported      | 是否支持安全弱读                    |
     | is_checksum_switch_supported     | ?                    |
-    | checksum_switch                  |                     |
-    | enable_extra_ok_packet_for_stats | ?                    |
+    | checksum_switch                  | ?                    |
+    | enable_extra_ok_packet_for_stats | 是否支持额外 OK 包                    |
