--- a/zh-CN/700.reference/1200.database-proxy/500.logical-connection/300.displays-session-statistics.md
+++ b/zh-CN/700.reference/1200.database-proxy/500.logical-connection/300.displays-session-statistics.md
@@ -1,8 +1,8 @@
 # 展示 Session 统计项
 
-本文介绍了查看 ODP 指定 Client Session 的内部统计项（包括：SQL 请求响应数量、SQL 请求响应大小等）的方法。
+本文介绍了如何通过 ODP 查看指定 Client Session 的内部统计项（包括：SQL 请求响应数量、SQL 请求响应大小等）。
 
-## 查看指定 Client Session 的内部统计项
+## 操作步骤
 
 通过 `SHOW PROXYSESSION STAT` 语句可以查看 ODP 指定 Client Session 的内部统计项。
 
@@ -209,23 +209,23 @@
     |                  字段                  |                 说明                 |
     |--------------------------------------|------------------------------------|
     | total_transaction_count              | 事务总数                               |
-    | total_user_transaction_count         |     ？ |
-    | total_query_count                    |     ？ |
-    | total_client_request_reread_count    |     ？ |
-    | total_server_response_reread_count   |    ？ |
+    | total_user_transaction_count         | ODP 用户事务执行的数量 |
+    | total_query_count                    | 用户执行请求的数量 |
+    | total_client_request_reread_count    | ODP 读取用户请求的次数 |
+    | total_server_response_reread_count   | ODP 读取 OBServer 节点返回数据的次数 |
     | client_request_total_size            | 客户端请求数据量总大小                           |
     | client_response_total_size           | 客户端返回数据量总大小                           |
     | server_request_total_size            | 发送给 OBServer 节点的请求数据量总大小             |
     | server_response_total_size           | OBServer 节点返回的数据量总大小                 |
     | total_transactions_time              | 事务执行总耗时                            |
-    | total_user_transactions_time         |     ？ |
+    | total_user_transactions_time         | 用户执行事务的总时间 |
     | total_client_request_read_time       | 客户端请求读取总时间                         |
     | total_client_response_write_time     | 返回客户端数据发送总时间                       |
     | total_client_request_analyze_time    | 解析客户端报文的总时间                        |
-    | total_client_transaction_idle_time   |     ？ |
+    | total_client_transaction_idle_time   | 用户事务执行中空闲的总时间 |
     | total_server_process_request_time    | 数据库处理请求总时间                         |
-    | total_server_response_read_time      | 读取 OBServer 节点返回数据总时间                |
-    | total_server_response_analyze_time   |     ？ |
+    | total_server_response_read_time      | 读取 OBServer 节点返回数据的总时间                |
+    | total_server_response_analyze_time   | ODP 解析该用户 Server 返回数据的总时间 |
     | total_send_saved_login_time          | 发送给 OBServer 节点 LOGIN 报文的总时间         |
     | total_send_all_session_vars_time     | 发送给 OBServer 节点 Session 变量同步总时间      |
     | total_send_use_database_time         | 发送给 OBServer 节点 use database 命令总时间   |
@@ -237,7 +237,7 @@
     | client_requests                      | 总请求数                               |
     | client_large_requests                | 大请求数                               |
     | client_internal_requests             | 内部请求数                              |
-    | local_session_state_requests         |     ？ |
+    | local_session_state_requests         | ODP 内部请求的数量 |
     | client_missing_pk_requests           | 统计本次请求不需要做路由处理，需要使用上个请求的连接的请求数量    |
     | client_completed_requests            | 已完成的请求数                            |
     | client_connection_abort_count        | 连接及中止统计                            |
