--- a/zh-CN/700.reference/1200.database-proxy/500.logical-connection/500.kill-server-session.md
+++ b/zh-CN/700.reference/1200.database-proxy/500.logical-connection/500.kill-server-session.md
@@ -1,10 +1,10 @@
 # 终止 Server Session
 
-本文介绍了 ODP 上终止指定 Client Session 和 Server Session 的方法。
+本文介绍了如何通过 ODP 终止指定 Client Session 以及指定 Client Session 上的 Server Session。
 
-## 终止指定的 Session
+## 操作步骤
 
-您可以通过 `KILL PROXYSESSION` 语句可以终止指定的 Session。
+`sys` 租户可以通过 `KILL PROXYSESSION` 语句终止指定的 Session。
 
 1. 使用 `root` 用户通过 ODP 连接的方式登录集群的 `sys` 租户。
 
@@ -34,61 +34,93 @@
 
      示例如下：
 
-     ```sql
-     obclient [(none)]> SHOW PROXYSESSION;
-     +----------------------+-------+----------+----------+------+----------------------+------+-------------+-------------------+-------------------+-------+-------+-----------+
-     | proxy_sessid         | Id    | Cluster  | Tenant   | User | Host                 | db   | trans_count | svr_session_count | state             | tid   | pid   | using_ssl |
-     +----------------------+-------+----------+----------+------+----------------------+------+-------------+-------------------+-------------------+-------+-------+-----------+
-     | 12402504630519660553 | 56932 | test420  | sys      | root | 100.xx.xx.xx:63882   | NULL |           0 |                 1 | MCS_ACTIVE_READER | 76286 | 76286 |         0 |
-     +----------------------+-------+----------+----------+------+----------------------+------+-------------+-------------------+-------------------+-------+-------+-----------+
-     1 row in set
+     1. 查看 Client Session，获取 `cs_id` 或 `connection_id`。
 
-     obclient [(none)]> KILL PROXYSESSION 56392;
-     ERROR 1317 (70100): Query execution was interrupted
+        执行以下语句获取 `cs_id`。
 
-     obclient [(none)]> SHOW PROXYSESSION;
-     ERROR 2013 (HY000): Lost connection to MySQL server during query
+        ```sql
+        SHOW PROXYSESSION;
+        ```
 
-     obclient [(none)]> SHOW PROXYSESSION;
-     ERROR 2006 (HY000): OceanBase server has gone away
-     No connection. Trying to reconnect...
-     Connection id:    57195
-     Current database: *** NONE ***
+        查询结果如下，返回结果中的 `Id` 即为 `cs_id`。
 
-     +----------------------+-------+----------+--------+------+----------------------+------+-------------+-------------------+-------------------+-------+-------+-----------+
-     | proxy_sessid         | Id    | Cluster  | Tenant | User | Host                 | db   | trans_count | svr_session_count | state             | tid   | pid   | using_ssl |
-     +----------------------+-------+----------+--------+------+----------------------+------+-------------+-------------------+-------------------+-------+-------+-----------+
-     | 12402504630519660555 | 57195 | test420  | sys    | root | 100.xx.xx.xx:24996   | NULL |           0 |                 1 | MCS_ACTIVE_READER | 76286 | 76286 |         0 |
-     +----------------------+-------+----------+--------+------+----------------------+------+-------------+-------------------+-------------------+-------+-------+-----------+
-     1 row in set
+        ```shell
+        +----------------------+-------+----------+----------+------+----------------------+------+-------------+-------------------+-------------------+-------+-------+-----------+
+        | proxy_sessid         | Id    | Cluster  | Tenant   | User | Host                 | db   | trans_count | svr_session_count | state             | tid   | pid   | using_ssl |
+        +----------------------+-------+----------+----------+------+----------------------+------+-------------+-------------------+-------------------+-------+-------+-----------+
+        | 12402504630519660553 | 56932 | test420  | sys      | root | 100.xx.xx.xx:63882   | NULL |           0 |                 1 | MCS_ACTIVE_READER | 76286 | 76286 |         0 |
+        +----------------------+-------+----------+----------+------+----------------------+------+-------------+-------------------+-------------------+-------+-------+-----------+
+        1 row in set
+        ```
 
-     obclient> SELECT CONNECTION_ID ();
-     +------------------+
-     | CONNECTION_ID () |
-     +------------------+
-     |       3221562906 |
-     +------------------+
-     1 row in set
+        或者，执行以下语句获取 `connection_id`。
 
-     obclient [(none)]> KILL PROXYSESSION 3221562906;
-     ERROR 1317 (70100): Query execution was interrupted
+        ```sql
+        SELECT CONNECTION_ID ();
+        ```
 
-     obclient [(none)]> SHOW PROXYSESSION;
-     ERROR 2013 (HY000): Lost connection to MySQL server during query
+        返回如下所示结果。
 
-     obclient [(none)]> SHOW PROXYSESSION;
-     ERROR 2006 (HY000): OceanBase server has gone away
-     No connection. Trying to reconnect...
-     Connection id:    64940
-     Current database: *** NONE ***
+        ```shell
+        +------------------+
+        | CONNECTION_ID () |
+        +------------------+
+        |       3221562906 |
+        +------------------+
+        1 row in set
+        ```
 
-     +----------------------+-------+----------+--------+------+----------------------+------+-------------+-------------------+-------------------+-------+-------+-----------+
-     | proxy_sessid         | Id    | Cluster  | Tenant | User | Host                 | db   | trans_count | svr_session_count | state             | tid   | pid   | using_ssl |
-     +----------------------+-------+----------+--------+------+----------------------+------+-------------+-------------------+-------------------+-------+-------+-----------+
-     | 12402504630519660556 | 64940 | test420  | sys    | root | 100.xx.xx.xx:63882   | NULL |           0 |                 1 | MCS_ACTIVE_READER | 76286 | 76286 |         0 |
-     +----------------------+-------+----------+--------+------+----------------------+------+-------------+-------------------+-------------------+-------+-------+-----------+
-     1 row in set
-     ```
+     2. 终止 `cs_id` 为 `56392` 或 `connection_id` 为 `3221562906` 的 Client Session。
+
+        ```sql
+        KILL PROXYSESSION 56392;
+        ```
+
+        或者
+
+        ```sql
+        KILL PROXYSESSION 3221562906;
+        ```
+
+        执行成功后，提示如下所示报错信息。
+
+        ```shell
+        ERROR 1317 (70100): Query execution was interrupted
+        ```
+
+     3. 查询中断后，查看 Client Session，发现连接已中断。
+
+        ```sql
+        SHOW PROXYSESSION;
+        ```
+
+        提示以下信息：
+
+        ```shell
+        ERROR 2013 (HY000): Lost connection to MySQL server during query
+        ```
+
+     4. 再次查看  Client Session。
+
+        ```sql
+        SHOW PROXYSESSION;
+        ```
+
+        提示以下信息：
+
+        ```shell
+        ERROR 2006 (HY000): OceanBase server has gone away
+        No connection. Trying to reconnect...
+        Connection id:    57195
+        Current database: *** NONE ***
+
+        +----------------------+-------+----------+--------+------+----------------------+------+-------------+-------------------+-------------------+-------+-------+-----------+
+        | proxy_sessid         | Id    | Cluster  | Tenant | User | Host                 | db   | trans_count | svr_session_count | state             | tid   | pid   | using_ssl |
+        +----------------------+-------+----------+--------+------+----------------------+------+-------------+-------------------+-------------------+-------+-------+-----------+
+        | 12402504630519660555 | 57195 | test420  | sys    | root | 100.xx.xx.xx:24996   | NULL |           0 |                 1 | MCS_ACTIVE_READER | 76286 | 76286 |         0 |
+        +----------------------+-------+----------+--------+------+----------------------+------+-------------+-------------------+-------------------+-------+-------+-----------+
+        1 row in set
+        ```
 
      通过示例可知，通过指定 `cs_id` 或 `connection_id`  来 KILL 当前的 Session 时，命令执行成功后，当前的连接中断。使用 `SHOW PROXYSESSION` 查看时，OBClient 会重新建立 Session 连接，并执行 SQL 显示结果。
 
@@ -108,69 +140,80 @@
 
      示例如下：
 
-     ```shell
-     obclient [(none)]> SHOW PROXYSESSION;
-     +----------------------+-------+----------+--------+------+----------------------+------+-------------+-------------------+-------------------+-------+-------+-----------+
-     | proxy_sessid         | Id    | Cluster  | Tenant | User | Host                 | db   | trans_count | svr_session_count | state             | tid   | pid   | using_ssl |
-     +----------------------+-------+----------+--------+------+----------------------+------+-------------+-------------------+-------------------+-------+-------+-----------+
-     | 12402504630519660556 | 64940 | test420  | sys    | root | 100.xx.xx.xx:63882   | NULL |           0 |                 1 | MCS_ACTIVE_READER | 76286 | 76286 |         0 |
-     +----------------------+-------+----------+--------+------+----------------------+------+-------------+-------------------+-------------------+-------+-------+-----------+
-     1 row in set
+     1. 查看 Client Session，获取 `cs_id`。
 
-     obclient [(none)]> SHOW PROXYSESSION ATTRIBUTE 64940;
-     +----------------------------------+----------------------+----------------+
-     | attribute_name                   | value                | info           |
-     +----------------------------------+----------------------+----------------+
-     | proxy_sessid                     | -6044239443189891060 | cs common      |
-     | cs_id                            | 64940                | cs common      |
-     | cluster                          | test3233             | cs common      |
-     | tenant                           | sys                  | cs common      |
-     | user                             | root                 | cs common      |
-     | host_ip                          | 100.xx.xx.xx         | cs common      |
-     | host_port                        | 63882                | cs common      |
-     | db                               | NULL                 | cs common      |
-     | total_trans_cnt                  | 0                    | cs common      |
-     | svr_session_cnt                  | 1                    | cs common      |
-     | active                           | true                 | cs common      |
-     | read_state                       | MCS_ACTIVE_READER    | cs common      |
-     | tid                              | 76286                | cs common      |
-     | pid                              | 76286                | cs common      |
-     | idc_name                         |                      | cs common      |
-     | modified_time                    | 0                    | cs stat        |
-     | reported_time                    | 0                    | cs stat        |
-     | hot_sys_var_version              | 0                    | cs var version |
-     | sys_var_version                  | 2                    | cs var version |
-     | user_var_version                 | 0                    | cs var version |
-     | last_insert_id_version           | 0                    | cs var version |
-     | db_name_version                  | 0                    | cs var version |
-     | server_ip                        | xx.xx.xx.xx          | last used ss   |
-     | server_port                      | 2881                 | last used ss   |
-     | server_sessid                    | 3221579563           | last used ss   |
-     | ss_id                            | 16                   | last used ss   |
-     | state                            | MSS_KA_CLIENT_SLAVE  | last used ss   |
-     | transact_count                   | 2                    | last used ss   |
-     | server_trans_stat                | 0                    | last used ss   |
-     | hot_sys_var_version              | 0                    | last used ss   |
-     | sys_var_version                  | 2                    | last used ss   |
-     | user_var_version                 | 0                    | last used ss   |
-     | last_insert_id_version           | 0                    | last used ss   |
-     | db_name_version                  | 0                    | last used ss   |
-     | is_checksum_supported            | 1                    | last used ss   |
-     | is_safe_read_weak_supported      | 0                    | last used ss   |
-     | is_checksum_switch_supported     | 1                    | last used ss   |
-     | checksum_switch                  | 1                    | last used ss   |
-     | enable_extra_ok_packet_for_stats | 1                    | last used ss   |
-     +----------------------------------+----------------------+----------------+
-     39 rows in set
+        ```sql
+        SHOW PROXYSESSION;
+        ```
 
-     obclient [(none)]> KILL PROXYSESSION 64940 16;
-     Query OK, 0 rows affected
+        查询结果如下，返回结果中的 `Id` 即为 `cs_id`。
 
-     obclient [(none)]> SHOW PROXYSESSION;
-     +----------------------+-------+----------+--------+------+----------------------+------+-------------+-------------------+-------------------+-------+-------+-----------+
-     | proxy_sessid         | Id    | Cluster  | Tenant | User | Host                 | db   | trans_count | svr_session_count | state             | tid   | pid   | using_ssl |
-     +----------------------+-------+----------+--------+------+----------------------+------+-------------+-------------------+-------------------+-------+-------+-----------+
-     | 12402504630519660556 | 64940 | test420  | sys    | root | 100.xx.xx.xx:63882   | NULL |           0 |                 0 | MCS_ACTIVE_READER | 76286 | 76286 |         0 |
-     +----------------------+-------+----------+--------+------+----------------------+------+-------------+-------------------+-------------------+-------+-------+-----------+
-     1 row in set
-     ```
+        ```shell
+        +----------------------+-------+----------+--------+------+----------------------+------+-------------+-------------------+-------------------+-------+-------+-----------+
+        | proxy_sessid         | Id    | Cluster  | Tenant | User | Host                 | db   | trans_count | svr_session_count | state             | tid   | pid   | using_ssl |
+        +----------------------+-------+----------+--------+------+----------------------+------+-------------+-------------------+-------------------+-------+-------+-----------+
+        | 12402504630519660556 | 64940 | test420  | sys    | root | 100.xx.xx.xx:63882   | NULL |           0 |                 1 | MCS_ACTIVE_READER | 76286 | 76286 |         0 |
+        +----------------------+-------+----------+--------+------+----------------------+------+------------- +-------------------+-------------------+-------+-------+-----------+
+        1 row in set
+        ```
+
+     2. 根据上一步得到的 `cs_id` 获取 `ss_id`。
+
+        ```sql
+        SHOW PROXYSESSION ATTRIBUTE 64940;
+        ```
+
+        查询结果如下：
+
+        ```shell
+        +----------------------------------+----------------------+----------------+
+        | attribute_name                   | value                | info           |
+        +----------------------------------+----------------------+----------------+
+        | proxy_sessid                     | -6044239443189891060 | cs common      |
+        | cs_id                            | 64940                | cs common      |
+        | cluster                          | test3233             | cs common      |
+        | tenant                           | sys                  | cs common      |
+        | user                             | root                 | cs common      |
+        | host_ip                          | 100.xx.xx.xx         | cs common      |
+        | host_port                        | 63882                | cs common      |
+        | db                               | NULL                 | cs common      |
+        | total_trans_cnt                  | 0                    | cs common      |
+        | svr_session_cnt                  | 1                    | cs common      |
+        | active                           | true                 | cs common      |
+        | read_state                       | MCS_ACTIVE_READER    | cs common      |
+        | tid                              | 76286                | cs common      |
+        | pid                              | 76286                | cs common      |
+        | idc_name                         |                      | cs common      |
+        | modified_time                    | 0                    | cs stat        |
+        | reported_time                    | 0                    | cs stat        |
+        | hot_sys_var_version              | 0                    | cs var version |
+        | sys_var_version                  | 2                    | cs var version |
+        | user_var_version                 | 0                    | cs var version |
+        | last_insert_id_version           | 0                    | cs var version |
+        | db_name_version                  | 0                    | cs var version |
+        | server_ip                        | xx.xx.xx.xx          | last used ss   |
+        | server_port                      | 2881                 | last used ss   |
+        | server_sessid                    | 3221579563           | last used ss   |
+        | ss_id                            | 16                   | last used ss   |
+        | state                            | MSS_KA_CLIENT_SLAVE  | last used ss   |
+        | transact_count                   | 2                    | last used ss   |
+        | server_trans_stat                | 0                    | last used ss   |
+        | hot_sys_var_version              | 0                    | last used ss   |
+        | sys_var_version                  | 2                    | last used ss   |
+        | user_var_version                 | 0                    | last used ss   |
+        | last_insert_id_version           | 0                    | last used ss   |
+        | db_name_version                  | 0                    | last used ss   |
+        | is_checksum_supported            | 1                    | last used ss   |
+        | is_safe_read_weak_supported      | 0                    | last used ss   |
+        | is_checksum_switch_supported     | 1                    | last used ss   |
+        | checksum_switch                  | 1                    | last used ss   |
+        | enable_extra_ok_packet_for_stats | 1                    | last used ss   |
+        +----------------------------------+----------------------+----------------+
+        39 rows in set
+        ```
+
+     3. 终止 Client Session 上的 Server Session。
+
+        ```sql
+        KILL PROXYSESSION 64940 16;
+        ```
