--- a/zh-CN/700.reference/500.system-reference/400.system-view-of-mysql-mode/300.performance-view-of-mysql-mode/2400.gv-memory-of-mysql-mode.md
+++ b/zh-CN/700.reference/500.system-reference/400.system-view-of-mysql-mode/300.performance-view-of-mysql-mode/2400.gv-memory-of-mysql-mode.md
@@ -1,13 +1,10 @@
-GV$OB_MEMORY
-=================================
+# GV$OB_MEMORY
 
-功能
------------
+## 功能
 
 展示租户级别的内存统计信息。
 
-字段说明
--------------
+## 字段说明
 
 |  **字段名称**   |    **类型**     | **是否可以为 NULL** |             **描述**             |
 |-------------|---------------|----------------|--------------------------------|
@@ -24,21 +21,21 @@ V4.x 版本中有关内存 CTX 的名称和含义如下：
 
 | CTX_NAME | 描述 |
 |----------|------|
-| DEFAULT_CTX_ID | 未划分的内存集合  |
-| MEMSTORE_CTX_ID | 用户 Memtable 数据  |
-| TRANS_CTX_MGR_ID | 事务上下文  |
-PLAN_CACHE_CTX_ID |执行计划缓存 |
-| GLIBC | 使用 Glibc Malloc 接口申请的内存  |
-| CO_STACK | 线程执行栈内存  |
-| KVSTORE_CACHE_ID | 动态可伸缩缓存  |
-| META_OBJ_CTX_ID | 存储元数据内存，如宏块 Meta 等  |
-| TX_CALLBACK_CTX_ID | 指事务回调上下文ID。用于记录事务执行过程中的部分修改，在事务提交或者回滚时可以找到对应数据做操作  |
-| LOB_CTX_ID | 用来标记 ObLobManager 里面的 allocator |
-| PS_CACHE_CTX_ID | `PREPARE stmt_name FROM preparable_stmt` 语句的缓存  |
-| TX_DATA_TABLE | 事务数据表。存放了已决事务的状态，用于转储未提交、fast commit等场景的查询  |
-| MDS_DATA_ID  | 多源数据的内存 |
-| LIBEASY | 网络框架内存（easy）  |
-| LOGGER_CTX_ID | 程序日志内存  |
-| RPC_CTX_ID | RPC 框架内存  |
-| PKT_NIO |  网络框架内存（pkt_nio） |
-| SCHEMA_SERVICE | Schema 元信息内存，如表、库等  |
+| DEFAULT_CTX_ID | 表示未划分的内存集合上下文 ID  |
+| MEMSTORE_CTX_ID | 表示用户 MemTable 数据上下文 ID  |
+| TRANS_CTX_MGR_ID | 表示事务上下文 ID |
+| PLAN_CACHE_CTX_ID | 表示执行计划缓存上下文 ID |
+| GLIBC | 表示使用 Glibc Malloc 接口申请的内存  |
+| CO_STACK | 表示线程执行栈内存  |
+| KVSTORE_CACHE_ID | 表示动态可伸缩缓存 ID  |
+| META_OBJ_CTX_ID | 表示存储元数据内存，如宏块 Meta 等  |
+| TX_CALLBACK_CTX_ID | 表示事务回调上下文 ID。用于记录事务执行过程中的部分修改，在事务提交或者回滚时可以找到对应数据做操作  |
+| LOB_CTX_ID | 表示标记 ObLobManager 中的 Allocator ID |
+| PS_CACHE_CTX_ID | 表示 `PREPARE stmt_name FROM preparable_stmt` 语句的缓存 ID  |
+| TX_DATA_TABLE | 表示事务数据表。存放了已决事务的状态，用于转储未提交、FAST COMMIT 等场景的查询  |
+| MDS_DATA_ID  | 表示多源数据的内存 ID |
+| LIBEASY | 表示网络框架内存（EASY）  |
+| LOGGER_CTX_ID | 表示程序日志内存上下文 ID  |
+| RPC_CTX_ID | 表示 RPC 框架内存上下文 ID  |
+| PKT_NIO |  表示网络框架内存（pkt_nio） |
+| SCHEMA_SERVICE | 表示 Schema 元信息内存，如表、库等  |
