--- a/zh-CN/600.manage/900.performance-tuning/400.sql-tuning/600.short-sql.md
+++ b/zh-CN/600.manage/900.performance-tuning/400.sql-tuning/600.short-sql.md
@@ -85,7 +85,7 @@ select /*+READ_CONSISTENCY(WEAK), QUERY_TIMEOUT(100000000)*/  svr_ip, sql_id,
        last_active_time,
        first_load_time,
        outline_data
-    FROM GV$PLAN_CACHE_PLAN_STAT
+    FROM GV$OB_PLAN_CACHE_PLAN_STAT
     WHERE TENANT_ID = 1002
     AND SQL_ID = '3310A1D1D81D4BA92CEEF42538136DD1'
     AND SVR_IP = '11.xxx.x.xx'
@@ -113,7 +113,7 @@ select /*+READ_CONSISTENCY(WEAK), QUERY_TIMEOUT(100000000)*/  svr_ip, sql_id,
     执行以下查询可以获得执行计划的树形形态。
 
     ```
-    SELECT OPERATOR, NAME, ROWS, COST FROM GV$PLAN_CACHE_PLAN_EXPLAIN
+    SELECT OPERATOR, NAME, ROWS, COST FROM GV$OB_PLAN_CACHE_PLAN_EXPLAIN
     WHERE TENANT_ID = 1002 AND
         IP = '11.xxx.x.xx' AND
         PORT = 35046 AND
