--- a/zh-CN/700.reference/500.sql-reference/300.pl-reference/100.what-is-pl/100.pl-introduction.md
+++ b/zh-CN/700.reference/500.sql-reference/300.pl-reference/100.what-is-pl/100.pl-introduction.md
@@ -18,7 +18,7 @@ PL 的主要优势如下：
 
   PL 的很多特性能让开发者省略开发设计和错误排查的时间，开发者可以使用 OceanBase 数据库自有的开发者中心（OceanBase Developer Center，ODC）进行高效的开发。
 
-  详细信息请参见 OceanBase 官网的 ODC 相关文档。
+  详细信息请参见 OceanBase 官网文档 [OceanBase 云平台](https://www.oceanbase.com/docs/oceanbase-ocp-cn)。
   
 
 * 可移植
