--- a/zh-CN/600.manage/900.performance-tuning/400.sql-tuning/500.slow-query.md
+++ b/zh-CN/600.manage/900.performance-tuning/400.sql-tuning/500.slow-query.md
@@ -62,7 +62,7 @@ SELECT SLEEP(1000) FROM T1;
        last_active_time,
        first_load_time,
        outline_data
-    FROM GV$PLAN_CACHE_PLAN_STAT
+    FROM GV$OB_PLAN_CACHE_PLAN_STAT
     WHERE TENANT_ID = 1002
     AND SQL_ID = '3310A1D1D81D4BA92CEEF42538136DD1'
     AND SVR_IP = '11.xxx.x.xx'
@@ -90,7 +90,7 @@ SELECT SLEEP(1000) FROM T1;
     执行以下查询可以获得执行计划的树形形态。
 
     ```
-    SELECT OPERATOR, NAME, ROWS, COST FROM GV$PLAN_CACHE_PLAN_EXPLAIN
+    SELECT OPERATOR, NAME, ROWS, COST FROM GV$OB_PLAN_CACHE_PLAN_EXPLAIN
     WHERE TENANT_ID = 1002 AND
         IP = '11.xxx.x.xx' AND
         PORT = 35046 AND
