--- a/zh-CN/700.reference/500.sql-reference/100.sql-syntax/100.system-tenants/200.alter-system/200.archivelog.md
+++ b/zh-CN/700.reference/500.sql-reference/100.sql-syntax/100.system-tenants/200.alter-system/200.archivelog.md
@@ -48,8 +48,7 @@ ALTER SYSTEM NOARCHIVELOG;
 | 字段 | 说明 |
 | --- | --- |
 | LOG_ARCHIVE_DEST | 配置日志归档的目的端。 |
-| archive_path  | 指定归档目的端。
-目前 OceanBase 数据库支持的归档目的端介质为 NFS 和阿里云 OSS。 |
+| archive_path  | 指定归档目的端。目前 OceanBase 数据库支持的归档目的端介质为 NFS 和阿里云 OSS。 |
 | archive_mode | 设置归档和业务的优先模式。目前支持 Optional 模式和 Mandatory 模式。如果不配置，默认为 Optional 模式。<ul> <li>Optional 模式：表示以用户业务优先。在该模式下，当归档（日志归档）速度跟上不日志生成的速度时，日志有可能来不及归档就被回收了，然后发生断流。</li> <li> Mandatory 模式：表示以归档优先。在该模式下如果归档跟不上用户数据的写入，可能会导致用户无法写入。</li></ul> |
 | piece_switch_interval | 配置 piece 的切换周期，取值范围为 \[1d, 7d\]。如果不设置，默认为 1d。 |
 | tenant_name | 指定租户名称。 |
