--- a/zh-CN/700.reference/500.sql-reference/100.sql-syntax/300.common-tenant-of-oracle-mode/900.sql-statement-of-oracle-mode/100.ddl-of-oracle-mode/2400.create-table-of-oracle-mode.md
+++ b/zh-CN/700.reference/500.sql-reference/100.sql-syntax/300.common-tenant-of-oracle-mode/900.sql-statement-of-oracle-mode/100.ddl-of-oracle-mode/2400.create-table-of-oracle-mode.md
@@ -206,7 +206,7 @@ on_commit_option:
 | ON COMMIT DELETE ROWS       | 事务级临时表，提交时删除数据。  |
 | ON COMMIT PRESERVE ROWS     | 会话级临时表，会话结束时删除数据。  |
 | parallel_clause             | 指定表级别的并行度： <ul><li> `NOPARALLEL`：并行度为 1，为默认配置。</li>   <li> `PARALLEL integer`：指定并行度，`integer` 取值大于等于 `1`。</li> </ul> <main id="notice" type='notice'><h4>注意</h4><p> 当指定并行度时，优先级关系如下：通过 Hint 指定的并行度 \> 通过 <code>ALTER SESSION</code> 指定的并行度 \> 表级别的并行度。 </p></main>    |
-| DUPLICATE_SCOPE |  指定复制表的属性，取值如下：<ul><li> `none`：表示该表是一个普通表，为默认值。<li></li> `cluster`：表示该表是一个复制表，Leader 需要将事务复制到当前租户的所有 F（全能）副本及 R（只读）副本。</li></ul>OceanBase 数据库目前仅支持 `cluster` 级别的复制表。|
+| DUPLICATE_SCOPE |  指定复制表的属性，取值如下：<ul><li> `none`：表示该表是一个普通表，为默认值。</li><li> `cluster`：表示该表是一个复制表，Leader 需要将事务复制到当前租户的所有 F（全能）副本及 R（只读）副本。</li></ul>OceanBase 数据库目前仅支持 `cluster` 级别的复制表。|
 
 ## 示例
 
@@ -216,18 +216,6 @@ on_commit_option:
   obclient> CREATE TABLE tbl1 (col1 INT PRIMARY KEY, col2 VARCHAR(50)) ;
   Query OK, 0 rows affected
   ```
-
-* 创建一个复制表。
-
-  ```sql
-  obclient> CREATE TABLE tbl2 (i_id INT,i_name VARCHAR(24), i_price DECIMAL(5,2), 
-                   i_data VARCHAR(50),i_im_id INT,PRIMARY KEY(i_id)) 
-                   COMPRESS FOR QUERY 
-                   PCTFREE = 0 
-                   BLOCK_SIZE = 16384 ;
-  Query OK, 0 rows affected
-  ```
-
 
 * 创建 Hash 分区，分区数为 `8` 的表。
 
