--- a/zh-CN/700.reference/400.development-reference/100.sql-syntax/200.common-tenant-of-mysql-mode/700.ddl-function-of-mysql-mode/400.column-operations-of-mysql-mode.md
+++ b/zh-CN/700.reference/400.development-reference/100.sql-syntax/200.common-tenant-of-mysql-mode/700.ddl-function-of-mysql-mode/400.column-operations-of-mysql-mode.md
@@ -341,15 +341,15 @@ obclient> ALTER TABLE tbl1 AUTO_INCREMENT=12;
 Query OK, 0 rows affected
 ```
 
-## 设置列约束为 `NULL`
+## 设置列约束为 `NOT NULL`
 
-设置列约束为 `NULL` 的语法如下：
+设置列约束为 `NOT NULL` 的语法如下：
 
 ```sql
-ALTER TABLE table_name MODIFY COLUMN column_name data_type NULL;
+ALTER TABLE table_name MODIFY COLUMN column_name data_type NOT NULL;
 ```
 
-设置列约束为 `NULL` 的示例如下：
+设置列约束为 `NOT NULL` 的示例如下：
 
 ```sql
 obclient> DESCRIBE tbl1;
@@ -363,7 +363,7 @@ obclient> DESCRIBE tbl1;
 +-------+-------------+------+-----+---------+-------+
 4 rows in set 
 
-obclient> ALTER TABLE tbl1 MODIFY COLUMN c1 INT NULL;
+obclient> ALTER TABLE tbl1 MODIFY COLUMN c2 INT NOT NULL;
 Query OK, 0 rows affected 
 
 obclient> DESCRIBE tbl1;
@@ -372,24 +372,24 @@ obclient> DESCRIBE tbl1;
 +-------+-------------+------+-----+---------+-------+
 | c4    | int(11)     | YES  |     | NULL    |       |
 | c1    | int(11)     | NO   | PRI | NULL    |       |
-| c2    | varchar(50) | YES  |     | NULL    |       |
+| c2    | varchar(50) | NO   |     | NULL    |       |
 | c3    | varchar(50) | YES  |     | NULL    |       |
 +-------+-------------+------+-----+---------+-------+
 4 rows in set
 ```
 
-## 设置列约束为 `NOT NULL`
+## 设置列约束为 `NULL`
 
-设置列约束为 `NOT NULL`的语法如下：
+设置列约束为 `NULL` 的语法如下：
 
 ```sql
-ALTER TABLE table_name MODIFY COLUMN column_name data_type NOT NULL;
+ALTER TABLE table_name MODIFY COLUMN column_name data_type NULL;
 ```
 
-设置列约束为 `NOT NULL`的示例如下：
+设置列约束为 `NULL` 的示例如下：
 
 ```sql
-obclient> ALTER TABLE tbl1 MODIFY COLUMN c1 INT NOT NULL;
+obclient> ALTER TABLE tbl1 MODIFY COLUMN c2 INT NULL;
 Query OK, 0 rows affected 
 
 obclient> DESCRIBE tbl1;
