--- a/zh-CN/700.reference/400.development-reference/100.sql-syntax/200.common-tenant-of-mysql-mode/700.ddl-function-of-mysql-mode/700.table-operations-of-mysql-mode.md
+++ b/zh-CN/700.reference/400.development-reference/100.sql-syntax/200.common-tenant-of-mysql-mode/700.ddl-function-of-mysql-mode/700.table-operations-of-mysql-mode.md
@@ -7,7 +7,7 @@ OceanBase 数据库 MySQL 模式下的表操作包括修改行格式、修改块
 修改行格式的语法如下：
 
 ```sql
-ALTER TABLE table_name ROW_FORMAT = {DEFAULT | DYNAMIC | FIXED | COMPRESSED | REDUNDANT | COMPACT};
+ALTER TABLE table_name ROW_FORMAT = {DEFAULT | DYNAMIC | COMPRESSED | REDUNDANT | COMPACT};
 ```
 
 修改行格式的语法如下：
