--- a/zh-CN/700.reference/400.development-reference/100.sql-syntax/200.common-tenant-of-mysql-mode/100.basic-elements-of-mysql-mode/300.character-set-and-collation-of-mysql-mode/300.collation-of-mysql-mode.md
+++ b/zh-CN/700.reference/400.development-reference/100.sql-syntax/200.common-tenant-of-mysql-mode/100.basic-elements-of-mysql-mode/300.character-set-and-collation-of-mysql-mode/300.collation-of-mysql-mode.md
@@ -20,10 +20,7 @@ OceanBase 数据库目前支持的字符序如下表所示。
 
   <main id="notice" type='explain'>
     <h4>说明</h4>
-    <ul>
-    <li>对于任何 Unicode 字符集，使用 <code>xxx_general_ci</code> 排序规则执行的操作比使用 <code>xxx_unicode_ci</code> 排序规则执行的操作快。</li>
-    <li>字符序暂不支持修改。</li>
-    </ul>
+    <p>对于任何 Unicode 字符集，使用 <code>xxx_general_ci</code> 排序规则执行的操作比使用 <code>xxx_unicode_ci</code> 排序规则执行的操作快。</p>
   </main>
 
 默认情况下，使用 `SHOW COLLATION` 语句显示所有可用的字符序。
