--- a/zh-CN/700.reference/400.development-reference/300.pl-reference/300.pl-oracle/300.process-control-oracle/300.loop-control-oracle.md
+++ b/zh-CN/700.reference/400.development-reference/300.pl-reference/300.pl-oracle/300.process-control-oracle/300.loop-control-oracle.md
@@ -55,7 +55,7 @@
 
 
 
-`EXIT`、`EXIT WHEN`、`CONTINUE` 和 `CONTINUE WHEN` 用于退出循环，可以放置在循环中的任何位置。这是推荐使用的退出循环的方法，要避免使用 `GOTO` 语句退出循环的方式。`EXIT` 语句会将控制转移到 `LOOP` 结束处；`CONTINUE` 语句会退出循环的当前迭代，并将控制转移到下次迭代开始处；`EXIT` 和 `CONTINUE` 都可以跟一个可选的 `WHEN` 子句，其中可以指定一个提交。
+`EXIT`、`EXIT WHEN`、`CONTINUE` 和 `CONTINUE WHEN` 用于退出循环，可以放置在循环中的任何位置。这是推荐使用的退出循环的方法，要避免使用 `GOTO` 语句退出循环的方式。`EXIT` 语句会将控制转移到 `LOOP` 结束处；`CONTINUE` 语句会退出循环的当前迭代，并将控制转移到下次迭代开始处；`EXIT` 和 `CONTINUE` 都可以跟一个可选的 `WHEN` 子句来指定一个条件，如果该条件为 `TURE` 则退出循环。
 
 如果是多层的嵌套循环，推荐给循环打上标签，这样会增加可读性。
 
