420 View change optimization

--- a/zh-CN/700.reference/700.system-views/400.system-view-of-mysql-mode/200.dictionary-view-of-mysql-mode/9700.oceanbase-cdb_ob_tablegroup_partitions-of-mysql-mode.md
+++ b/zh-CN/700.reference/700.system-views/400.system-view-of-mysql-mode/200.dictionary-view-of-mysql-mode/9700.oceanbase-cdb_ob_tablegroup_partitions-of-mysql-mode.md
@@ -8,6 +8,11 @@ oceanbase.CDB_OB_TABLEGROUP_PARTITIONS
 
 系统租户下展示所有租户的分区表组的一级分区信息。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>从 V4.0.0 版本开始引入，从 V4.2.0 版本开始废弃。</p>
+</main>
+
 字段说明 
 ----------------------
 
