--- a/zh-CN/700.reference/700.system-views/500.system-view-of-oracle-mode/200.dictionary-view-of-oracle-mode/7800.dba_ob_tablegroup_partitions-of-oracle-mode.md
+++ b/zh-CN/700.reference/700.system-views/500.system-view-of-oracle-mode/200.dictionary-view-of-oracle-mode/7800.dba_ob_tablegroup_partitions-of-oracle-mode.md
@@ -7,7 +7,7 @@
 
 <main id="notice" type='explain'>
   <h4>说明</h4>
-  <p>从 V4.0.0 版本开始引入。</p>
+  <p>从 V4.0.0 版本开始引入，从 V4.2.0 版本开始废弃。</p>
 </main>
 
 字段说明 
