--- a/zh-CN/700.reference/500.sql-reference/100.sql-syntax/200.common-tenant-of-mysql-mode/100.basic-elements-of-mysql-mode/100.data-type-of-mysql-mode/300.date-and-time-types-of-mysql-mode/200.date-datetime-and-timestamp-types-of-mysql-mode.md
+++ b/zh-CN/700.reference/500.sql-reference/100.sql-syntax/200.common-tenant-of-mysql-mode/100.basic-elements-of-mysql-mode/100.data-type-of-mysql-mode/300.date-and-time-types-of-mysql-mode/200.date-datetime-and-timestamp-types-of-mysql-mode.md
@@ -49,7 +49,7 @@ TIMESTAMP[(fsp)]
 示例如下：
 
 ```sql
-CREATE TABLE t(C1 TIMESTAMP(6));
+CREATE TABLE t(c1 TIMESTAMP(6));
 ```
 
 `TIMESTAMP` 值可以包括秒的小数位部分，精度最高可达微秒（6 位），格式为 `'YYYY-MM-DD hh:mm:ss[.fraction]'`，范围是 '0000-00-00 00:00:00.000000' 到 '9999-12-31 23:59:59.999999'。小数部分应始终与其他时间位用小数点分隔，不识别其他分隔符。
