--- a/zh-CN/700.reference/700.system-views/210.differences-of-views-between-3.x-and-4.x.md
+++ b/zh-CN/700.reference/700.system-views/210.differences-of-views-between-3.x-and-4.x.md
@@ -310,8 +310,7 @@
 
 | **视图名** | **引入版本**| **描述** |
 | ------ | ------ | ------ |
-| oceanbase.DBA_OB_DATA_DICTIONARY_IN_LOG| V4.2.0 | 记录数据字典在系统日志流中的位置范围，方便 CDC 消费数据字典|
-| oceanbase.CDB_OB_DATA_DICTIONARY_IN_LOG| V4.2.0 | 记录数据字典在系统日志流中的位置范围，方便 CDC 消费数据字典|
+| <ul><li>oceanbase.DBA_OB_DATA_DICTIONARY_IN_LOG  </li><li>oceanbase.CDB_OB_DATA_DICTIONARY_IN_LOG </li></ul>| V4.2.0 | 记录数据字典在系统日志流中的位置范围，方便 CDC 消费数据字典|
 | oceanbase.DBA_OB_TASK_OPT_STAT_GATHER_HISTORY| V4.2.0 | 查询历史收集任务执行情况|
 | oceanbase.DBA_OB_TABLE_OPT_STAT_GATHER_HISTORY| V4.2.0 | 查询表的历史收集执行情|
 | oceanbase.CDB_OB_LOG_RESTORE_SOURCE| V4.2.0 | 展示物理恢复租户、备租户的日志恢复源|
@@ -330,7 +329,7 @@
 | oceanbase.DBA_OB_TRANSFER_TASKS| V4.2.0 | 展示租户下当前正在执行的 Transfer 任务|
 | oceanbase.DBA_OB_TRANSFER_TASK_HISTORY| V4.2.0 | 展示租户下所有执行 Transfer 任务的历史|
 | oceanbase.CDB_OB_TRANSFER_TASKS| V4.2.0 | 展示所有租户当前正在执行的 Transfer 任务|
-|oceanbase.CDB_OB_TRANSFER_TASK_HISTORY| V4.2.0 | 展示所有租户已执行的 Transfer 任务历史|
+| oceanbase.CDB_OB_TRANSFER_TASK_HISTORY| V4.2.0 | 展示所有租户已执行的 Transfer 任务历史|
 | oceanbase.CDB_OB_ACCESS_POINT | V4.2.0 | 展示租户入口的 Server 列表|
 | oceanbase.DBA_OB_ACCESS_POINT| V4.2.0 | 展示租户入口的 Server 列表|
 | oceanbase.DBA_DB_LINKS| V4.2.0 | 展示当前租户下所有已创建的 DBLINK  |
@@ -354,24 +353,16 @@
 | DBA_OB_ACCESS_POINT | V4.2.0 | 展示租户入口的 Server 列表|
 | DBA_OB_LS_HISTORY| V4.2.0 | 展示本租户历史上存在过的日志流|
 | DBA_OB_TENANT_EVENT_HISTORY| V4.2.0 | 用于展示本租户的历史操作记录 |
-| GV$OB_THREAD| V4.2.0  | 用于显示 observer 进程中的所有线程的状态信息 |
-| V$OB_THREAD| V4.2.0 | 用于显示 observer 进程中的所有线程的状态信息  |
-| GV$OB_ARBITRATION_SERVICE_STATUS| V4.2.0 | 用于展示集群和仲裁服务之间的通信状态  |
-| V$OB_ARBITRATION_SERVICE_STATUS| V4.2.0 | 用于展示集群和仲裁服务之间的通信状态 |
-| GV$OB_ARBITRATION_MEMBER_INFO| V4.2.0 | 用于展示本集群的仲裁成员信息 |
-| V$OB_ARBITRATION_MEMBER_INFO| V4.2.0 | 用于展示本集群的仲裁成员信息 |
-| GV$OB_OPT_STAT_GATHER_MONITOR | V4.2.0 | 查询统计信息收集任务的实时状态 |
-| V$OB_OPT_STAT_GATHER_MONITOR| V4.2.0 | 查询统计信息收集任务的实时状态 |
-| GV$OB_LOCKS | V4.2.0 | 用于显示当前用户各表持锁或请求锁的情况 |
-| V$OB_LOCKS | V4.2.0 | 用于显示当前用户各表持锁或请求锁的情况  |
+| <ul><li>GV\$OB_THREAD  </li><li>V$OB_THREAD </li></ul>| V4.2.0  | 用于显示 observer 进程中的所有线程的状态信息 |
+| <ul><li>GV\$OB_ARBITRATION_SERVICE_STATUS  </li><li>V$OB_ARBITRATION_SERVICE_STATUS </li></ul>| V4.2.0 | 用于展示集群和仲裁服务之间的通信状态  |
+| <ul><li>GV\$OB_ARBITRATION_MEMBER_INFO  </li><li>V$OB_ARBITRATION_MEMBER_INFO </li></ul>| V4.2.0 | 用于展示本集群的仲裁成员信息 |
+| <ul><li>GV\$OB_OPT_STAT_GATHER_MONITOR  </li><li>V$OB_OPT_STAT_GATHER_MONITOR </li></ul> | V4.2.0 | 查询统计信息收集任务的实时状态 |
+| <ul><li>GV\$OB_LOCKS  </li><li>V$OB_LOCKS </li></ul> | V4.2.0 | 用于显示当前用户各表持锁或请求锁的情况 |
 | V$OB_LS_LOG_RESTORE_STATUS| V4.2.0 | 展示日志流级别日志恢复状态 |
 | V$OB_TIMESTAMP_SERVICE| V4.2.0 | 显示租户时钟服务的 GTS/STS 值、时钟服务所在的节点信息和时钟源类型  |
-|GV$OB_PX_P2P_DATAHUB| V4.2.0 | 展示并行执行的数据传输操作的相关信息 |
-| V$OB_PX_P2P_DATAHUB | V4.2.0 | 展示并行执行的数据传输操作的相关信息 |
-| GV$SQL_JOIN_FILTER| V4.2.0 | 动态展示 Join Filter 执行相关信息  |
-| V$SQL_JOIN_FILTER | V4.2.0 | 动态展示 Join Filter 执行相关信息  |
-| GV$OB_SQL_PLAN| V4.2.0 | 显示用户通过执行 EXPLAIN PLAN 收集到的计划信息|
-| V$OB_SQL_PLAN| V4.2.0 | 显示用户通过执行 EXPLAIN PLAN 收集到的计划信息|
+| <ul><li>GV\$OB_PX_P2P_DATAHUB </li><li>V$OB_PX_P2P_DATAHUB </li></ul>| V4.2.0 | 展示并行执行的数据传输操作的相关信息 |
+| <ul><li>GV\$SQL_JOIN_FILTER  </li><li> V$SQL_JOIN_FILTER</li></ul>| V4.2.0 | 动态展示 Join Filter 执行相关信息  |
+| <ul><li>GV\$OB_SQL_PLAN  </li><li>V$OB_SQL_PLAN </li></ul>| V4.2.0 | 显示用户通过执行 EXPLAIN PLAN 收集到的计划信息|
 | oceanbase.DBA_OB_USER_DEFINED_RULES |V4.1.0 | 记录了自定义改写 SQL 语句的规则 |
 | oceanbase.CDB_OB_LS_LOG_ARCHIVE_PROGRESS | V4.1.0 | 为系统租户展示所有租户的日志流归档进度 |
 | oceanbase.DBA_OB_LS_LOG_ARCHIVE_PROGRESS | V4.1.0 | 为本租户展示租户的日志流归档进度 |
@@ -381,30 +372,20 @@
 | oceanbase.CDB_OB_LS_ARB_REPLICA_TASK_HISTORY| V4.1.0 | 仅系统租户可访问，展示当前租户及对应用户租户执行过的仲裁服务任务历史 |
 | oceanbase.DBA_OB_LS_ARB_REPLICA_TASK_HISTORY | V4.1.0 | 展示当前租户及对应用户租户执行过的仲裁服务任务历史|
 | oceanbase.DBA_OB_CLUSTER_EVENT_HISTORY| V4.1.0 | 仅系统租户可访问，展示集群级别重要事件，当前仅支持展示集群升级相关事件|
-|oceanbase.DBA_OB_RSRC_IO_DIRECTIVES | V4.1.0 | 展示 Resource Manager 中的 IO 资源配置情况|
-|V$OB_ARCHIVE_DEST_STATUS| V4.1.0  | 展示租户级各个归档目的端状态 |
+| oceanbase.DBA_OB_RSRC_IO_DIRECTIVES | V4.1.0 | 展示 Resource Manager 中的 IO 资源配置情况|
+| V$OB_ARCHIVE_DEST_STATUS| V4.1.0  | 展示租户级各个归档目的端状态 |
 | DBA_OB_USER_DEFINED_RULES| V4.1.0  | 记录了自定义改写 SQL 语句的规则|
 | DBA_OB_TENANTS| V4.1.0 | 展示租户的基本信息 |
 | DBA_OB_LS_LOG_ARCHIVE_PROGRESS | V4.1.0 | 为本租户展示租户的日志流归档进度|
-|DBA_POLICIES| V4.1.0 | 展示了对某一个表进行访问控制时，一个表上可以创建多个策略|
-| ALL_POLICIES| V4.1.0 | 展示了对某一个表进行访问控制时，一个表上可以创建多个策略|
-| USER_POLICIES | V4.1.0 | 展示了对某一个表进行访问控制时，一个表上可以创建多个策略|
-| DBA_POLICY_GROUPS | V4.1.0 | 展示策略组信息，配合策略上下文实现对不同的用户生效不同的策略 |
-|ALL_POLICY_GROUPS | V4.1.0 | 展示策略组信息，配合策略上下文实现对不同的用户生效不同的策略 |
-| USER_POLICY_GROUPS| V4.1.0 | 展示策略组信息，配合策略上下文实现对不同的用户生效不同的策略|
-| DBA_POLICY_CONTEXTS| V4.1.0 | 展示访问视图时会根据上下文的取值选择对应的策略组生效|
-| ALL_POLICY_CONTEXTS | V4.1.0 | 展示访问视图时会根据上下文的取值选择对应的策略组生效 |
-| USER_POLICY_CONTEXTS| V4.1.0 | 展示访问视图时会根据上下文的取值选择对应的策略组生效 |
-| DBA_SEC_RELEVANT_COLS | V4.1.0 |将某一列和列级策略关联起来，当访问这一列时对应策略生效  |
-| ALL_SEC_RELEVANT_COLS| V4.1.0 | 将某一列和列级策略关联起来，当访问这一列时对应策略生效 |
-| USER_SEC_RELEVANT_COLS |  V4.1.0| 将某一列和列级策略关联起来，当访问这一列时对应策略生效 |
+| <ul><li>ALL_POLICIES  </li><li>DBA_POLICIES </li><li>USER_POLICIES </li></ul>| V4.1.0 | 展示了对某一个表进行访问控制时，一个表上可以创建多个策略|
+| <ul><li>ALL_POLICY_GROUPS  </li><li>DBA_POLICY_GROUPS </li><li>USER_POLICY_GROUPS </li></ul> | V4.1.0 | 展示策略组信息，配合策略上下文实现对不同的用户生效不同的策略 |
+| <ul><li>ALL_POLICY_CONTEXTS  </li><li>DBA_POLICY_CONTEXTS </li><li>USER_POLICY_CONTEXTS </li></ul>| V4.1.0 | 展示访问视图时会根据上下文的取值选择对应的策略组生效|
+| <ul><li>ALL_SEC_RELEVANT_COLS  </li><li>DBA_SEC_RELEVANT_COLS </li><li>USER_SEC_RELEVANT_COLS </li></ul> | V4.1.0 |将某一列和列级策略关联起来，当访问这一列时对应策略生效  |
 | DBA_OB_LS_ARB_REPLICA_TASKS | V4.1.0 | 展示当前租户及对应用户租户正在运行中的仲裁服务任务 |
 | DBA_OB_LS_ARB_REPLICA_TASK_HISTORY| V4.1.0 | 展示当前租户及对应用户租户执行过的仲裁服务任务历史 |
-| ALL_TRIGGER_ORDERING | V4.1.0 | 用于查看当前数据库下所有触发器的排序 |
-| DBA_TRIGGER_ORDERING | V4.1.0 | 用于查看当前数据库下触发器的排序 |
-| USER_TRIGGER_ORDERING |V4.1.0 | 用于查看当前用户下触发器的排序 |
+| <ul><li>ALL_TRIGGER_ORDERING  </li><li>DBA_TRIGGER_ORDERING </li><li>USER_TRIGGER_ORDERING </li></ul> | V4.1.0 | 用于查看当前数据库下所有触发器的排序 |
 | DBA_OB_RSRC_IO_DIRECTIVES | V4.1.0 | 展示 Resource Manager 中的 IO 资源配置情况 |
-| ALL_DB_LINKS| V4.1.0 | 展示当前用户可访问的所有 DBLINK |
+| <ul><li>  </li><li> </li><li> </li></ul>ALL_DB_LINKS| V4.1.0 | 展示当前用户可访问的所有 DBLINK |
 | DBA_DB_LINKS | V4.1.0 | 展示当前租户下所有已创建的 DBLINK |
 | USER_DB_LINKS| V4.1.0  | 展示当前用户所创建的 DBLINK |
 | DBA_OB_TENANTS | V4.0.0 | 展示租户的基本信息  |
