--- a/zh-CN/700.reference/500.system-reference/300.system-variable-of-oracle-mode/6500.ob_early_lock_release-of-oracle-mode.md
+++ b/zh-CN/700.reference/500.system-reference/300.system-variable-of-oracle-mode/6500.ob_early_lock_release-of-oracle-mode.md
@@ -4,7 +4,7 @@
 
   <main id="notice" type='explain'>
     <h4>说明</h4>
-    <p>该变量已不再使用。</p>
+    <p>该变量从 V2.2.30 版本开始不再使用，相关信息请查询变量 enable_early_lock_release。</p>
   </main>
 
 | **属性**  |                                                 **描述**                                                 |
