--- a/zh-CN/700.reference/800.configuration-items-and-system-variables/200.system-variable/300.global-system-variable/6600.ob_early_lock_release-global.md
+++ b/zh-CN/700.reference/800.configuration-items-and-system-variables/200.system-variable/300.global-system-variable/6600.ob_early_lock_release-global.md
@@ -4,7 +4,7 @@
 
   <main id="notice" type='explain'>
     <h4>说明</h4>
-    <p>该变量从 V2.2.30 版本开始不再使用，相关信息请查询变量 enable_early_lock_release。</p>
+    <p>该变量从 V2.2.30 版本开始废弃。</p>
   </main>
 
 | **属性**  |                                                 **描述**                                                 |
