--- a/zh-CN/700.reference/900.error-code/700.error-code-of-oracle-mode/300.ora-01000-to-ora-01499-of-oracle-mode.md
+++ b/zh-CN/700.reference/900.error-code/700.error-code-of-oracle-mode/300.ora-01000-to-ora-01499-of-oracle-mode.md
@@ -519,7 +519,7 @@ ORA-01481：invalid number format model
 
 * 错误原因：试图通过 `TO_CHAR` 将数字转换为字符串或者通过 `TO_NUMBER` 将字符串转换成数字，但是使用了无效的数值格式。
 
-* 解决方法：数值格式化的详细信息，请参见官网文档 《SQL 参考（Oracle 模式）》的 [数值格式化](https://icms.alibaba-inc.com/content/oceanbase-database/oceanbase-database?l=1&m=68382&n=2913350)章 节。
+* 解决方法：数值格式化的详细信息，请参见官网文档 《SQL 参考（Oracle 模式）》的 [格式模型概述](../../../700.reference/500.sql-reference/100.sql-syntax/300.common-tenant-of-oracle-mode/300.basic-elements-of-oracle-mode/400.format-of-oracle-mode/100.formatting-overview-of-oracle-mode.md) 章节。
 
 ORA-01481：invalid number format model
 ----------------------------------------------------------
@@ -530,7 +530,7 @@ ORA-01481：invalid number format model
 
 * 错误原因：试图通过 `TO_CHAR` 将数字转换为字符串或者通过 `TO_NUMBER` 将字符串转换成数字，但是使用了无效的数值格式。
 
-* 解决方法：数值格式化的详细信息，请参见官网文档 《SQL 参考（Oracle 模式）》的 [数值格式化](https://icms.alibaba-inc.com/content/oceanbase-database/oceanbase-database?l=1&m=68382&n=2913350)章 节。
+* 解决方法：数值格式化的详细信息，请参见官网文档 《SQL 参考（Oracle 模式）》的 [格式模型概述](../../../700.reference/500.sql-reference/100.sql-syntax/300.common-tenant-of-oracle-mode/300.basic-elements-of-oracle-mode/400.format-of-oracle-mode/100.formatting-overview-of-oracle-mode.md) 章节。
 
 ORA-01482：unsupported character set
 --------------------------------------------------------
