420 fix DBA_OB_ARCHIVELOG

--- a/zh-CN/700.reference/700.system-views/500.system-view-of-oracle-mode/200.dictionary-view-of-oracle-mode/21100.dba_ob_archivelog-of-oracle-mode.md
+++ b/zh-CN/700.reference/700.system-views/500.system-view-of-oracle-mode/200.dictionary-view-of-oracle-mode/21100.dba_ob_archivelog-of-oracle-mode.md
@@ -17,7 +17,7 @@
 | ROUND_ID | NUMBER(38) | NO | 标识第几轮备份 |
 | INCARNATION | NUMBER(38) | NO | 表示 Flashback Database 后的第几次分身 |
 | DEST_NO | NUMBER(38) | NO | 标识 log_archive_dest_n |
-| STATUS | VARCHAR2(64) | NO | 备份任务的状态：<li>BEGINNING：正在启动日志归档<li>DOING：正在进行日志归档<li>INTERRUPTED：日志归档中断，需要人工介入<li>STOP：日志归档已停止<li>STOPPING：正在停止日志归档 |
+| STATUS | VARCHAR2(64) | NO | 备份任务的状态：<ul><li>BEGINNING：正在启动日志归档  </li><li>DOING：正在进行日志归档 </li><li> INTERRUPTED：日志归档中断，需要人工介入 </li><li>STOP：日志归档已停止  </li><li>STOPPING：正在停止日志归档  </li><li>SUSPENDING：正在暂停日志归档  </li><li>SUSPEND：日志归档已暂停  </li></ul> |
 | START_SCN | NUMBER(38) | NO | 开始备份位点 |
 | START_SCN_DISPLAY | TIMESTAMP(9) | NO | 将 START_SCN 转换成时间单位之后的展示 |
 | CHECKPOINT_SCN | NUMBER(38) | NO | 当前归档位点 |
