--- a/zh-CN/700.reference/500.system-reference/600.error-code-of-mysql-mode/900.9000-9499-of-mysql-mode.md
+++ b/zh-CN/700.reference/500.system-reference/600.error-code-of-mysql-mode/900.9000-9499-of-mysql-mode.md
@@ -825,6 +825,6 @@ ERROR 9202 (HY000) : Auto extend param is not ready to start extending file
 
 * OceanBase 错误码：9202
 
-* 错误原因：可能由于配置等问题，未启动自动扩容，或已经自动扩容到磁盘最大可用上限。
+* 错误原因：可能由于配置等问题，未启动自动扩容，或 `datafile` 预设磁盘占用资源达到了上限。
 
-* 解决方式：确认自动扩容相关配置是否正确，或者联系技术支持人员协助排查。
+* 解决方式：检查 `__all_virtual_disk_stat` 表中 `free_size` 字段是否为 0。如果是，说明磁盘空间已经用尽，需要增大 `datafile` 阈值或进行磁盘扩容。
