--- a/zh-CN/600.manage/1000.troubleshooting/900.backup-and-recovery/100.data-backup-failed.md
+++ b/zh-CN/600.manage/1000.troubleshooting/900.backup-and-recovery/100.data-backup-failed.md
@@ -78,7 +78,7 @@
 
       * 租户状态不处于 Normal
 
-      对于其他情况导致的数据备份任务发起失败，请联系技术支持人员协助处理。
+      对于其他情况导致的数据备份任务发起失败，获取搜索到的日志报错信息后，联系技术支持人员协助处理。
 
 ## 问题二：数据备份卡在某个状态不结束
 
