--- a/zh-CN/700.reference/1400.oceanbase-tools/400.1.ocp-express/100.ocp-express.md
+++ b/zh-CN/700.reference/1400.oceanbase-tools/400.1.ocp-express/100.ocp-express.md
@@ -1,6 +1,6 @@
 # OceanBase 云平台 Express (OCP Express)
 
-OCP Express 是一个基于 Web 的 OceanBase 4.x 管理工具，它集成在 OceanBase 数据库集群中，支持数据库集群关键性能指标查看及基本数据库管理功能。OCP Express 脱胎于 OceanBase 云平台（OceanBase Cloud Platform，OCP），在保留云平台核心能力的基础上，调整了整体的功能布局，给予用户全新的使用体验；同时也进一步调整了功能配置，使得 OCP Express 可以以极小的资源消耗部署在任意一台数据库节点上，使得 OCP Express 用户以最小的成本，获取全新的 OceanBase 4.x 管控体验。
+OCP Express 是一款开源且可视化的 OceanBase 数据库管控组件，支持数据库基础管理及监控等功能，满足个人用户、小型企业对单个 OceanBase 集群轻量化管理要求，使得 OCP Express 用户以最小的成本，获取全新的 OceanBase 4.x 管控体验。
 
 ## 特性介绍
 
