420：demo Synchronize modifications

--- a/zh-CN/300.develop/200.application-development-of-oracle-mode/200.sample-program-of-oracle-mode/300.c-of-oracle-mode/100.oceanbase-connector-c-connection-to-oceanbase-database-sample-program.md
+++ b/zh-CN/300.develop/200.application-development-of-oracle-mode/200.sample-program-of-oracle-mode/300.c-of-oracle-mode/100.oceanbase-connector-c-connection-to-oceanbase-database-sample-program.md
@@ -6,7 +6,7 @@
 
 ## 前提条件
 
-* 您已安装 OceanBase 数据库并且创建 Oracle 模式的用户租户。安装 OceanBase 数据库的详细信息，请参见 [部署概述](../../../../../400.deploy/100.deploy-overview.md)。
+* 您已安装 OceanBase 数据库并且创建 Oracle 模式的用户租户。安装 OceanBase 数据库的详细信息，请参见 [部署概述](../../../../400.deploy/100.deploy-overview.md)。
 * 您已安装 OceanBase Connector/C 驱动程序。请联系技术支持获取 OceanBase Connector/C 驱动程序 Windows 版本的安装包。
 * 您已安装 Visual Studio。
 
@@ -464,6 +464,6 @@ if (NULL == mysql_real_connect(&con_oboracle, "xxx.xxx.xxx.xxx", "sys@oracle001"
 
 ## 相关文档
 
-* 更多连接 OceanBase 数据库的信息，请参见 [连接方式概述](../../100.connect-to-oceanbase-database-of-mysql-mode/100.connection-methods-overview-of-mysql-mode.md)。
+* 更多连接 OceanBase 数据库的信息，请参见 [连接方式概述](../../100.connect-to-oceanbase-database-of-oracle-mode/100.connection-methods-overview-of-oracle-mode.md)。
 
 * 更多 OceanBase Connector/C 的信息，请参见 [OceanBase Connector/C](https://www.oceanbase.com/docs/oceanbase-connector-c-cn)。
